adding all codes together

--- a/.env
+++ b/.env
@@ -6,3 +6,6 @@ POSTGRES_PORT=5432
 max_pool_connection=5
 pool_connection_timeout = 30
 UsersTable=exp.users_table
+ExpenseTable=exp.expense_transaction_table
+TeamTable=exp.team
+TeamMembersTable=exp.team_members 
