--- a/.env
+++ b/.env
@@ -1,7 +1,12 @@
-POSTGRES_HOST=localhost
+# POSTGRES_HOST=localhost
+# POSTGRES_DATABASE=postgres
+# POSTGRES_USER=postgres
+# POSTGRES_PASSWORD=root
+# POSTGRES_PORT=5432
+POSTGRES_HOST=34.93.234.50
 POSTGRES_DATABASE=postgres
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=root
+POSTGRES_USER=expense
+POSTGRES_PASSWORD=Madival.14@
 POSTGRES_PORT=5432
 max_pool_connection=5
 pool_connection_timeout = 30
