--- a/.env
+++ b/.env
@@ -3,10 +3,10 @@
 # POSTGRES_USER=postgres
 # POSTGRES_PASSWORD=root
 # POSTGRES_PORT=5432
-POSTGRES_HOST=34.93.234.50
+POSTGRES_HOST=db.idavfxmomqnyydakiled.supabase.co
 POSTGRES_DATABASE=postgres
-POSTGRES_USER=expense
-POSTGRES_PASSWORD=Madival.14@
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=VGY9XeLCxNIyty6r
 POSTGRES_PORT=5432
 max_pool_connection=5
 pool_connection_timeout = 30
