--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ click==8.1.7
 colorama==0.4.6
 cryptography==41.0.5
 Flask==3.0.0
+gunicorn
 importlib-metadata==6.8.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
@@ -11,7 +12,7 @@ jwt==1.3.1
 MarkupSafe==2.1.3
 numpy==1.24.4
 pandas==2.0.3
-psycopg2==2.9.9
+psycopg2-binary
 pycparser==2.21
 PyJWT==2.8.0
 python-dateutil==2.8.2
