--- a/.env
+++ b/.env
@@ -1,13 +1,13 @@
-POSTGRES_HOST=localhost
-POSTGRES_DATABASE=postgres
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=root
-POSTGRES_PORT=5432
-# POSTGRES_HOST=db.idavfxmomqnyydakiled.supabase.co
+# POSTGRES_HOST=localhost
 # POSTGRES_DATABASE=postgres
 # POSTGRES_USER=postgres
-# POSTGRES_PASSWORD=VGY9XeLCxNIyty6r
+# POSTGRES_PASSWORD=root
 # POSTGRES_PORT=5432
+POSTGRES_HOST=db.idavfxmomqnyydakiled.supabase.co
+POSTGRES_DATABASE=postgres
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=VGY9XeLCxNIyty6r
+POSTGRES_PORT=5432
 max_pool_connection=5
 pool_connection_timeout = 30
 UsersTable=exp.users_table
