--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ click==8.1.7
 colorama==0.4.6
 cryptography==41.0.5
 Flask==3.0.0
+Flask-Cors==4.0.0
 gunicorn
 importlib-metadata==6.8.0
 itsdangerous==2.1.2
